--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,6 @@
 <body>
 <h1>Welcome to Index PAGE!</h1>
 
-
+<a href="/allIndex"><big>Page for writing your login and password</big></a>
 </body>
 </html>
