--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -4,8 +4,21 @@
     <title>Spring Security Example</title>
 </head>
 <body>
-<h1>User, welcome spring boot security page!</h1>
+<h1>User Data</h1>
 
+<div>
+    <th:block>
+        <h1 th:text="'User name - ' + ${messages.getName()}"></h1>
+        <th:block
+                th:each="msg : ${messages.getRoles()}">
+            <h1 th:text="${msg}"></h1>
+        </th:block>
+    </th:block>
+</div>
+
+<form th:action="@{/logout}" method="post">
+    <input type="submit" value="Sign Out"/>
+</form>
 
 </body>
 </html>
