--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -6,20 +6,26 @@
 </head>
 <body>
 <form action="#" th:action="@{/admin/create}" th:object="${user}" method="post">
-  <label for="name">Name</label>
-  <input type="text" th:field="*{name}" id="name" placeholder="name">
-  <br/>
-  <label for="last_name">Last Name</label>
-  <input type="text" th:field="*{last_name}" id="last_name" placeholder="last_name">
+  <label for="firstName">Username</label>
+  <input type="text" th:field="*{username}" id="firstName" placeholder="Username">
   <br/>
   <label for="password">Password</label>
   <input type="text" th:field="*{password}" id="password" placeholder="Password">
+  <br/>
+  <label for="city">City</label>
+  <input type="text" th:field="*{city}" id="city" placeholder="City">
+  <br/>
+  <label for="phone">Phone</label>
+  <input type="text" th:field="*{phone}" id="phone" placeholder="Phone">
+  <br/>
+  <label for="email">Email</label>
+  <input type="text" th:field="*{email}" id="email" placeholder="Email">
   <br/>
   <p>
     <label>Roles
       <input type="checkbox" name="roleList"
              th:each="rol : ${roleList}"
-             th:text="${rol.getRole()}"
+             th:text="${rol.getNoPrefix()}"
              th:value="${rol.role}"
              th:field="*{roles}"
       />
