--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -9,25 +9,31 @@
   <label for="id">ID</label>
   <input readonly type="number" th:field="*{id}" id="id" placeholder="ID">
   <br/>
-  <label for="name">Name</label>
-  <input type="text" th:field="*{name}" id="name" placeholder="name">
+  <label for="firstName">First name</label>
+  <input type="text" th:field="*{username}" id="firstName" placeholder="Username">
   <br/>
-  <label for="last_name">Last Name</label>
-  <input type="text" th:field="*{last_name}" id="last_name" placeholder="last_name">
+  <label for="lastName">Password</label>
+  <input type="text" th:field="*{password}" id="lastName" placeholder="Password">
   <br/>
-  <label for="password">Password</label>
-  <input type="text" th:field="*{password}" id="password" placeholder="Password">
+  <label for="city">City</label>
+  <input type="text" th:field="*{city}" id="city" placeholder="City">
   <br/>
-
+  <label for="phone">Phone</label>
+  <input type="text" th:field="*{phone}" id="phone" placeholder="Phone">
+  <br/>
+  <label for="email">Email</label>
+  <input type="text" th:field="*{email}" id="email" placeholder="Email">
+  <br/>
+  <!--                    <ul>-->
   <th:block th:each="msg : ${user.getRoles()}">
-    <li th:text="${msg}"></li>
+    <li th:text="${msg.getNoPrefix()}"></li>
   </th:block>
-
+  <!--                    </ul>-->
   <p>
     <label>Roles
       <input type="checkbox" name="roleList"
              th:each="rol : ${roleList}"
-             th:text="${rol.getRole()}"
+             th:text="${rol.getNoPrefix()}"
              th:value="${rol.role}"
              th:field="*{roles}"
       />
