--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -8,7 +8,8 @@
 
 <div>
     <th:block>
-        <h1 th:text="'User name - ' + ${messages.getName()}"></h1>
+        <h1 th:text="'User name - ' + ${messages.getUsername()}"></h1>
+        <h1 th:text="'Email - ' + ${messages.getEmail()}"></h1>
         <th:block
                 th:each="msg : ${messages.getRoles()}">
             <h1 th:text="${msg}"></h1>
