--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -1,92 +1,190 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Users</title>
-
-  <style type="text/css">
-    .tg {
-      border-collapse: collapse;
-      border-spacing: 0;
-      border-color: #797979;
-    }
-
-    .tg td {
-      font-family: "Times New Roman", sans-serif;
-      font-size: 14px;
-      padding: 10px 5px;
-      border-style: solid;
-      border-width: 1px;
-      overflow: hidden;
-      word-break: normal;
-      border-color: #797979;
-      color: #333;
-      background-color: #fff;
-    }
-
-    .tg th {
-      font-family: "Times New Roman", sans-serif;
-      font-size: 14px;
-      font-weight: normal;
-      padding: 10px 5px;
-      border-style: solid;
-      border-width: 1px;
-      overflow: hidden;
-      word-break: normal;
-      border-color: #797979;
-      color: #333;
-      background-color: #bebebe;
-    }
-
-    .tg {
-      background-color: #f9f9f9;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Admin panel</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
 <body>
-<div th:switch="${users}">
-  <h2 th:case="null">No users found!</h2>
-  <div th:case="*">
-    <h2>Admin</h2>
-    <table class="tg">
-      <thead>
-      <tr>
-        <th width="80">id</th>
-        <th width="120">user name</th>
-        <th width="120">password</th>
-        <th width="120">city</th>
-        <th width="120">phone</th>
-        <th width="120">email</th>
-        <th width="120">roles</th>
-      </tr>
-      </thead>
-      <tbody>
-
-      <tr th:each="user : ${users}">
-        <td th:text="${user.getId()}"></td>
-        <td th:text="${user.getUsername()}"></td>
-        <td th:text="${user.password}"></td>
-        <td th:text="${user.city}"></td>
-        <td th:text="${user.phone}"></td>
-        <td th:text="${user.email}"></td>
-        <td>
-          <th:block th:each="msg : ${user.getRoles()}">
-            <li th:text="${msg.getNoPrefix()}"></li>
-          </th:block>
-        </td>
-        <td><a th:href="@{admin/update/{id}(id=${user.getId()})}">Edit</a></td>
-        <td><a th:href="@{admin/delete/{id}(id=${user.id})}">Delete</a></td>
-      </tr>
-      </tbody>
-    </table>
-  </div>
-
-  <form th:action="@{/admin/create}" method="get">
-    <input type="submit" value="Create user"/>
-  </form>
-  <form th:action="@{/logout}" method="post">
-    <input type="submit" value="Sign Out"/>
-  </form>
-</div>
+<nav class="navbar navbar-dark bg-dark">
+    <div class="container-fluid">
+        <p class="navbar-brand text-white">
+            <b><span class="align-middle" th:text="${user.username}"></span></b>
+            <span class="align-middle">with roles:</span>
+            <span class="align-middle" th:text="${user.getShortRoles()}"></span>
+        </p>
+        <form th:action="@{/logout}" method="post">
+            <button type="submit" class="btn btn-dark text-secondary">Logout</button>
+        </form>
+    </div>
+</nav>
+<section>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="p-0 col-2">
+                <div class="nav flex-column nav-pills pt-4" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                    <a class="nav-link active" href="/admin"  role="tab"
+                       aria-controls="v-pills-home" aria-selected="true">Admin</a>
+                    <a class="nav-link" href="/user" role="tab"
+                       aria-controls="v-pills-profile" aria-selected="false">User</a>
+                </div>
+            </div>
+            <div class="col-10 px-0">
+                <div class="container-fluid">
+                    <h1 class="m-3 fw-bold">Admin panel</h1>
+                    <div class="tab-content" id="tabContent">
+                        <ul class="nav nav-tabs">
+                            <a class="nav-link active" data-toggle="tab">Users Table</a>
+                            <a class="nav-link" data-toggle="tab" th:href="@{admin/new}">New User</a>
+                        </ul>
+                        <div class="card">
+                            <div class="card-header">
+                                <div class="m-1">
+                                    <h4>All users</h4>
+                                </div>
+                            </div>
+                            <div class="card-body" bg-primary text-white>
+                                <table class="table table-striped table-hover">
+                                    <tr>
+                                        <th>ID</th>
+                                        <th>Email</th>
+                                        <th>Name</th>
+                                        <th>City</th>
+                                        <th>Role</th>
+                                        <th>Edit</th>
+                                        <th>Delete</th>
+                                    </tr>
+                                    <tr th:each="user : ${users}">
+                                        <td th:text="${user.id}">id</td>
+                                        <td th:text="${user.email}">email</td>
+                                        <td th:text="${user.firstName}">username</td>
+                                        <td th:text="${user.city}">city</td>
+                                        <td th:text="${user.getShortRoles()}">roles</td>
+                                        <td>
+                                            <a type="button" class="btn btn-sm btn-primary" data-bs-toggle="modal"
+                                               data-bs-target="#editModal"
+                                               th:data-bs-target="${'#editModal'+user.id}">Edit</a>
+                                        </td>
+                                        <td>
+                                            <a type="button" class="btn btn-sm btn-danger" data-bs-toggle="modal"
+                                               data-bs-target="#DELETE"
+                                               th:data-bs-target="${'#DELETE'+user.id}">Delete</a>
+                                        </td>
+                                        <div class="modal fade" th:id="${'editModal'+user.id}"
+                                             aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                            <div class="modal-dialog" modal-dialog-centered>
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <h5 class="modal-title" id="editModalLabel">Edit user</h5>
+                                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                                aria-label="Close">
+                                                        </button>
+                                                    </div>
+                                                    <form th:action="@{admin/edit/{id}(id=${user.id})}"
+                                                          th:object="${user}" th:method="PUT">
+                                                        <div class="modal-body col-md text-center">
+                                                            <br>
+                                                            <label for="email0"><b>Email</b></label>
+                                                            <input th:name="email" th:type="text"
+                                                                   class="form-control" id="email0"
+                                                                   th:value="${user.email}"/>
+                                                            <br>
+                                                            <br>
+                                                            <label for="name0"><b>Name</b></label>
+                                                            <input th:name="firstName" th:type="text"
+                                                                   class="form-control" id="name0"
+                                                                   th:value="${user.firstName}"/>
+                                                            <br>
+                                                            <label for="city0"><b>City</b></label>
+                                                            <input th:name="city" th:type="text"
+                                                                   class="form-control" id="city0"
+                                                                   th:value="${user.city}"/>
+                                                            <br>
+                                                            <label for="password0"><b>Password</b></label>
+                                                            <input th:name="password" type="text"
+                                                                   class="form-control" id="password0"
+                                                                   th:value="${user.password}"/>
+                                                            <br>
+                                                            <label for="exampleFormControlSelect3"><b>Role</b></label>
+                                                            <select multiple size="2" name="select_role" class="form-control" id="exampleFormControlSelect3">
+                                                                <option th:each="role : ${role}"
+                                                                        th:value="${role.getAuthority()}"
+                                                                        th:text="${role.getAuthority() == 'ROLE_ADMIN'} ? 'ADMIN' : 'USER'">
+                                                                </option>
+                                                            </select>
+                                                            <br><br>
+                                                        </div>
+                                                        <div class="modal-footer">
+                                                            <button type="submit" class="btn btn-primary">
+                                                                Edit
+                                                            </button>
+                                                            <button type="button" class="btn btn-secondary"
+                                                                    data-bs-dismiss="modal">Close</button>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="modal fade" th:id="${'DELETE'+user.id}"
+                                             aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                            <div class="modal-dialog" role="document">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <h5 class="modal-title" id="exampleModalLabel">Delete
+                                                            user</h5>
+                                                        <button type="button" class="btn-close"
+                                                                data-bs-dismiss="modal"
+                                                                aria-label="Close">
+                                                        </button>
+                                                    </div>
+                                                    <form class="modal-body col-md text-center"
+                                                          th:action="@{admin/deleteUser/{id}(id=${user.id})}"
+                                                          th:method="DELETE">
+                                                        <div class="modal-body col-md">
+                                                            <label for="id"><b>ID</b></label>
+                                                            <input th:name="id" th:type="text" class="form-control"
+                                                                   id="id" th:value="${user.id}" disabled/>
+                                                            <br>
+                                                            <label for="email1"><b>Email</b></label>
+                                                            <input th:name="email" th:type="text"
+                                                                   class="form-control" id="email1"
+                                                                   th:value="${user.email}"/>
+                                                            <br>
+                                                            <label for="name1"><b>Name</b></label>
+                                                            <input th:name="name" th:type="text"
+                                                                   class="form-control"
+                                                                   id="name1" th:value="${user.firstName}" disabled/>
+                                                            <br>
+                                                            <label for="hobby1"><b>City</b></label>
+                                                            <input th:name="city" th:type="text"
+                                                                   class="form-control"
+                                                                   id="hobby1" th:value="${user.city}" disabled/>
+                                                            <br>
+                                                        </div>
+                                                        <div class="modal-footer">
+                                                            <button type="button" class="btn btn-secondary"
+                                                                    data-bs-dismiss="modal">Close
+                                                            </button>
+                                                            <button type="submit" class="btn btn-danger">Delete
+                                                            </button>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </tr>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
 </html>
